syntax = "proto3";

package dg.model;

import "system.proto";
import "witness.proto";
import "skynet.proto";
import "ranker.proto";

service MatrixService {
    rpc Ping (PingRequest) returns (PingResponse) {
    }

    rpc SystemStatus (SystemStatusRequest) returns (SystemStatusResponse) {
    }

    rpc GetInstances (GetInstancesRequest) returns (InstanceConfigureResponse) {
    }

    rpc ConfigEngine (InstanceConfigureRequest) returns (InstanceConfigureResponse) {
    }

    rpc Recognize (WitnessRequest) returns (WitnessResponse) {
    }

    rpc BatchRecognize (WitnessBatchRequest) returns (WitnessBatchResponse) {
    }

    rpc VideoRecognize (SkynetRequest) returns (SkynetResponse) {
    }

    rpc GetRankedVector (FeatureRankingRequest) returns (FeatureRankingResponse) {
    }
}